[gd_scene load_steps=2 format=3 uid="uid://c8k9m2xpvnq3d"]

[ext_resource type="Script" path="res://Scripts/VictoryMenu.gd" id="1"]

[node name="VictoryMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.12, 0.08, 0.95)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VictoryTitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "üèÜ VICTORY! üèÜ"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 42
theme_override_colors/font_color = Color(0.9, 1, 0.8, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.8)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3

[node name="Subtitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "You have restored the echoes of the hollow!"
horizontal_alignment = 1
theme_override_colors/font_color = Color(0.8, 0.9, 0.7, 1)
theme_override_font_sizes/font_size = 18

[node name="Spacer1" type="Control" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 30)

[node name="StatsContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="EchoesCollected" type="Label" parent="VBoxContainer/StatsContainer"]
layout_mode = 2
text = "Echoes Collected: 16/16"
horizontal_alignment = 1
theme_override_colors/font_color = Color(0.7, 0.8, 1, 1)
theme_override_font_sizes/font_size = 16

[node name="LevelsCompleted" type="Label" parent="VBoxContainer/StatsContainer"]
layout_mode = 2
text = "Levels Completed: 3/3"
horizontal_alignment = 1
theme_override_colors/font_color = Color(0.7, 0.8, 1, 1)
theme_override_font_sizes/font_size = 16

[node name="Spacer2" type="Control" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 40)

[node name="MessageText" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 80)
theme_override_colors/default_color = Color(0.8, 0.9, 0.8, 1)
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "[center]The skeleton has been restored to human form!

The echoes of memory, essence, and hope
have brought life back to the hollow world.

[color=#99ff99][b]Thank you for playing![/b][/color]"
fit_content = true

[node name="Spacer3" type="Control" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 30)

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PlayAgainButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(120, 45)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.8, 0.8, 1, 1)
theme_override_colors/font_hover_color = Color(0.9, 0.9, 1, 1)
theme_override_font_sizes/font_size = 16
text = "PLAY AGAIN"

[node name="Spacer" type="Control" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
custom_minimum_size = Vector2(20, 0)

[node name="MainMenuButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(120, 45)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.8, 0.8, 1, 1)
theme_override_colors/font_hover_color = Color(0.9, 0.9, 1, 1)
theme_override_font_sizes/font_size = 16
text = "MAIN MENU" 